# TraDiE-policies

./: README.md  apply_policies.py  create_waymo_submission.py  eval_waymo.py  index.html  optimizers.py  prepare_waymo_gt.py  pyproject.toml  utils.py
